<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/jugador_item_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/text_view_numero_jugador_aux"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:text="@string/jugador_numero"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35dp" />

    <LinearLayout
        android:id="@+id/jugador_raiting_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_view_jugador_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/jugador_nombre"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/text_view_posicion_jugador_aux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/jugador_posicion"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" />

    </LinearLayout>

</LinearLayout>