<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center_horizontal|top"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/equipo_data_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/nombre_equipo"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txt_nombre_equipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/equipo_categoria"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txt_categoria_equipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns_agregar_equipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_guardar_equipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipo_guardar"
            android:onClick="onGuardar" />

        <Button
            android:id="@+id/btn_eliminar_equipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipo_eliminar" 
            android:onClick="onEliminar" />
    </LinearLayout>

</LinearLayout>